--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@
 
 buildscript {
     repositories {
-        maven {
-            url = "http://maven-repo2.iggroup.local:8081/nexus/content/repositories/ig.dev.public"
-        }
+        google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url = "http://maven-repo2.iggroup.local:8081/nexus/content/repositories/ig.dev.public"
-        }
+        google()
+        jcenter()
     }
 }
 
